# en2am

./: CMakeLists.txt  README.md  en2am.cc  en_am.h
core/: CMakeLists.txt  en2am.cc  en_am.h
gui/: README.md
gui/systray/: CMakeLists.txt  main.cc  systray.qrc  systray_window.cc  systray_window.h  window.cc  window.h
