PROJECT("Systray")

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})
 
SET(SOURCE_FILES window.cc main.cc)
SET(HEADER_FILES window.h)
SET(RESOURCE_FILES systray.qrc)
 
QT4_WRAP_CPP(MOC_FILES ${HEADER_FILES})
QT4_ADD_RESOURCES(RCC_FILES "${RESOURCE_FILES}")

MESSAGE("SOURCE_FILES : ${SOURCE_FILES}")
MESSAGE("HEADER_FILES : ${HEADER_FILES}")
MESSAGE("RESOURCE_FILES : ${RESOURCE_FILES}")
MESSAGE("MOC_FILES : ${MOC_FILES}")
MESSAGE("RCC_FILES : ${RCC_FILES}")
 
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_BINARY_DIR}")
 
ADD_EXECUTABLE(systray ${SOURCE_FILES} ${MOC_FILES} ${RCC_FILES})
 
TARGET_LINK_LIBRARIES(systray ${QT_LIBRARIES})
